#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-04
2014-06-26 Mikhail S. Dubrovin
- add CalibFileFinder.py - analogous to src/CalibFileFinder.cpp for pythonic-psana modules

Tag: V00-02-03
2014-05-28 Mikhail S. Dubrovin
- in CSPadCalibPars - use print_bits to control warning messages

Tag: V00-02-02
2014-05-24 Mikhail S. Dubrovin
- fix ex_princeton_calib_pars
	
Tag: V00-02-01
2014-05-23 Mikhail S. Dubrovin
- New generic algorithms for access to calibration parameters are implemented;
- remove PrincetonCalibPars
- add GenericCalibPars
- in CalibParsStore use GenericCalibPars for all implemented detectors;
	CsPad, CsPad2x2, Pnccd, Princeton, Andor, Opal1000, Opal4000
- To add new detector "Det":
	1) pdscalibdata/DetBaseV1.h
	2) in PSCalib/src/GenericCalibPars.cpp add
             #include "pdscalibdata/DetBaseV1.h"
             ...
	     template class PSCalib::GenericCalibPars<pdscalibdata::Opal4000BaseV1>;
	3) in PSCalib/include/CalibParsStore.h add
             #include "pdscalibdata/DetBaseV1.h"
             ...
             return new PSCalib::GenericCalibPars<pdscalibdata::DetBaseV1>(calibdir, type_group, src, runnum, prbits);
	
Tag: V00-01-26
2014-05-21 Mikhail S. Dubrovin
- add test/ex_princeton_calib_pars.cpp, PrincetonCalibPars
- add CalibPars.cpp for default virtual methods
- add PrincetonCalibPars and insert it in CalibParsStore.h
2014-05-13 Mikhail S. Dubrovin
- in CalibFileFinder use the same constructor for default parameter print_bits 

Tag: V00-01-25
2014-05-06 Mikhail S. Dubrovin
- in SvnProps.py (to get rid of nightly complains) move global class attributes under __init__

Tag: V00-01-24
2014-04-29 Mikhail Dubrovin