@@ -12,7 +12,7 @@ Also see: ~/.subversion/config
 This software was developed for the SIT project.
 If you use all or part of it, please give an appropriate acknowledgment.
 
-@version $Id: SvnProps.py 8295 2014-05-28 18:28:22Z dubrovin@SLAC.STANFORD.EDU $
+@version $Id$
 
 @author Mikhai S. Dubrovin
 """
@@ -21,7 +21,7 @@ If you use all or part of it, please give an appropriate acknowledgment.
 # Properties substituted by SVN 
 #------------------------------
 # __revision__ = "$Revision$"
-# __author__   = "$Author: dubrovin@SLAC.STANFORD.EDU $"
+# __author__   = "$Author$"
 #------------------------------
 
 import sys
@@ -32,12 +32,12 @@ class SvnProps :
     def __init__(self) : 
         self.updated  = "2014-05-05"
         self.revision = "$Revision$"
-        self.author   = "$Author: dubrovin@SLAC.STANFORD.EDU $"
-        self.id       = "$Id: SvnProps.py 8295 2014-05-28 18:28:22Z dubrovin@SLAC.STANFORD.EDU $"
+        self.author   = "$Author$"
+        self.id       = "$Id$"
         self.headurl  = "$HeadURL: https://pswww.slac.stanford.edu/svn/psdmrepo/PSCalib/trunk/src/SvnProps.py $"
         self.header   = "$Header:$"
-        self.datelc   = "$LastChangedDate: 2014-05-28 11:28:22 -0700 (Wed, 28 May 2014) $"
-        self.date     = "$Date: 2014-05-28 11:28:22 -0700 (Wed, 28 May 2014) $"
+        self.datelc   = "$LastChangedDate$"
+        self.date     = "$Date$"
 
 #------------------------------
 
